# titanic_to_production

./: .coverage  .gitignore  Dockerfile  README.md  _quarto.yml  index.html  index.qmd  main.py  pyproject.toml  requirements.txt  search.json  test.csv  titanic.py  train.csv  train.py  train_evaluate.py
.github/workflows/: prod.yml  test.yaml  website.yml
.quarto/idx/: index.qmd.json
.quarto/idx/docs/notebooks/: titanic.ipynb.json
.quarto/project-cache/: deno-kv-file
.quarto/xref/: INDEX  bebf2085
_site/: index.html  search.json
_site/docs/notebooks/: titanic.html
_site/site_libs/bootstrap/: bootstrap-240dea53209f98a20234c14e7492ada4.min.css
app/: api.py  run.sh
dags/: tutorial.py
data/derived/: test.parquet  train.parquet
deployment/: deployment.yaml  ingress.yaml  service.yaml
docs/: main.py  train.py
docs/notebooks/: titanic.html
site_libs/bootstrap/: bootstrap.min.css
src/models/: train_evaluate.py
src/pipeline/: build_pipeline.py
tests/: test_model.py
titanicml/: __init__.py
titanicml/pipeline/: build_pipeline.py
