[project]
name = "titanicml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas",
  "python-dotenv",
  "scikit-learn",
  "loguru",
  "pyarrow>=20.0.0",
  "pytest",
]

[project.optional-dependencies]
dev = [
  "vulture",
  "black",
  "pylint",
  "pytest",
  "pytest-cov",
]

[project.scripts]
docs = "docs.main:main"

[tool.setuptools.packages.find]
include = ["titanicml*"]
exclude = ["data*", "logs*", "docs*", "tests*"]

[tool.uv]
package = true
